# chatserver

./: .gitignore  README.md  close_public_access.sh  cloud_security_guide.md  demo.sh  diagnose.sh  diagnose_network.sh  find_id_guide.md  fix_auth.sh  install_nodejs.sh  push_to_github.sh  quick_test.sh  setup_firewall.sh  start_local.sh  start_public.sh  start_web_chat.sh  test_connection.sh
src/server/: CMakeLists.txt  web_server_minimal.cpp
web/: README.md  app.js  debug.html  find-id.html  index.html  package-lock.json  package.json  server.js  start.sh  styles.css  test_auth.js  test_simple.html
